<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calendarActivityRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="net.mythrowaway.app.module.trash.presentation.view.calendar.CalendarActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/calendarContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/calendarToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.ToolbarTheme"
            android:background="@color/md_theme_background"
            app:titleTextColor="@color/md_theme_onBackground"
...
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="?attr/colorSurface"
        android:orientation="vertical">

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/main_nav_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:elevation="1dp"
            app:menu="@menu/main" />

...
