<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuItemAdd"
        android:title="@string/label_add_button"
        android:icon="@drawable/ic_add_bkack_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuItemList"
        android:title="@string/label_edit"
...
